gitops-iac-combined -> added new params

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-iampolicyTF.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-iampolicyTF.yaml.j2
@@ -1,5 +1,5 @@
 module "account_policy" {
-  source               = "{{ POLICY_SOURCE}}"
+  source               = "{{ IAM_ACCOUNT_POLICY_SOURCE }}"
   name_prefix          = var.name_prefix
   create_s3_iam_group  = var.create_s3_iam_group
   create_s3_iam_policy = var.create_s3_iam_policy
