added efs to create for every app

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-mainTF.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-mainTF.yaml.j2
@@ -43,9 +43,50 @@ locals {
   worker_subnet_ids = data.aws_subnets.workload_subnets.ids
 
   multiple-efs = {
-    efs1 = {
+{% if EFS_MANAGE == "true" %}
+    manage-db2 = {
       name = join("-", ["efs", var.cluster_name, var.instance_name, "manage-db2"])
+      performance_mode = "{{EFS_MANAGE_DB2_PERFORMANCE_MODE}}"
+      throughput_mode = "{{EFS_MANAGE_DB2_THROUGHPUT_MODE}}"
+      efs_mount_count = {{EFS_MANAGE_DB2_MOUNT_COUNT}}
     }
+    manage-main = {
+      name = join("-", ["efs", var.cluster_name, var.instance_name, "manage-main"])
+      performance_mode = "{{EFS_MANAGE_MAIN_PERFORMANCE_MODE}}"
+      throughput_mode = "{{EFS_MANAGE_MAIN_THROUGHPUT_MODE}}"
+      efs_mount_count = {{EFS_MANAGE_MAIN_MOUNT_COUNT}}
+    }
+{% endif %}
+{% if EFS_IOT == "true" %}
+    iot-db2 = {
+      name = join("-", ["efs", var.cluster_name, var.instance_name, "iot-db2"])
+      performance_mode = "{{EFS_IOT_DB2_PERFORMANCE_MODE}}"
+      throughput_mode = "{{EFS_IOT_DB2_THROUGHPUT_MODE}}"
+      efs_mount_count = {{EFS_IOT_DB2_MOUNT_COUNT}}
+    }
+{% endif %}
+{% if EFS_VISUALINSPECTION == "true" %}
+    visualinspection-main = {
+      name = join("-", ["efs", var.cluster_name, var.instance_name, "visualinspection-main"])
+      performance_mode = "{{EFS_VISUALINSPECTION_MAIN_PERFORMANCE_MODE}}"
+      throughput_mode = "{{EFS_VISUALINSPECTION_MAIN_THROUGHPUT_MODE}}"
+      efs_mount_count = {{EFS_VISUALINSPECTION_MAIN_MOUNT_COUNT}}
+    }
+{% endif %}
+{% if EFS_FACILITIES == "true" %}
+    facilities-db2 = {
+      name = join("-", ["efs", var.cluster_name, var.instance_name, "facilities-db2"])
+      performance_mode = "{{EFS_FACILITIES_DB2_PERFORMANCE_MODE}}"
+      throughput_mode = "{{EFS_FACILITIES_DB2_THROUGHPUT_MODE}}"
+      efs_mount_count = {{EFS_FACILITIES_DB2_MOUNT_COUNT}}
+    }
+    facilities-main = {
+      name = join("-", ["efs", var.cluster_name, var.instance_name, "facilities-main"])
+      performance_mode = "{{EFS_FACILITIES_MAIN_PERFORMANCE_MODE}}"
+      throughput_mode = "{{EFS_FACILITIES_MAIN_THROUGHPUT_MODE}}"
+      efs_mount_count = {{EFS_FACILITIES_MAIN_MOUNT_COUNT}}
+    }
+{% endif %}
   }
 }
 
