--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-efs.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-efs.yaml.j2
@@ -4,20 +4,15 @@ module "efs" {
   for_each       = local.multiple-efs
   creation_token = each.value.name
 
-  performance_mode = "{{EFS_PERFORMANCE_MODE}}"
-  efs_mount_count  = "{{EFS_MOUNT_COUNT}}"
+  performance_mode = each.value.performance_mode
+  efs_mount_count  = each.value.efs_mount_count
 
   lifecycle_policy = {
-    {%- if EFS_LIFECYCLE_POLICY_TRANSITION_TO_IA is defined and EFS_LIFECYCLE_POLICY_TRANSITION_TO_IA | trim != '' %}
-    transition_to_ia = "{{EFS_LIFECYCLE_POLICY_TRANSITION_TO_IA}}"
-    {%- endif %}
-    {%- if EFS_LIFECYCLE_POLICY_TRANSITION_TO_PRIMARY_STORAGE_CLASS is defined and EFS_LIFECYCLE_POLICY_TRANSITION_TO_PRIMARY_STORAGE_CLASS | trim != '' %}
-    transition_to_primary_storage_class = "{{EFS_LIFECYCLE_POLICY_TRANSITION_TO_PRIMARY_STORAGE_CLASS}}"
-    {%- endif %}
+
   }
 
-    throughput_mode              = "{{EFS_THROUGHPUT_MODE}}"
+    throughput_mode              = each.value.throughput_mode
     efs_mount_ingress_subnet_ids = local.cluster.internal_subnet_ids
     efs_mount_egress_subnet_ids  = local.cluster.external_subnet_ids
-    efs_worker_subnet_id_list    = local.worker_subnet_ids
+    efs_worker_subnet_id_list    = local.cluster.internal_subnet_ids
 }
