--- a/tekton/src/tasks/gitops/gitops-iac-efs.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-efs.yml.j2
@@ -29,26 +29,80 @@ spec:
     - name: mas_instance_id
       type: string
 
+   # iac-efs-common
     - name: is_efs
       type: string
+      default: 'false'
     - name: efs_source
       type: string
-    - name: efs_creation_token
+      default: ''
+
+   # iac-efs manage_db2 params
+    - name: efs_manage_db2_performance_mode
       type: string
-    - name: efs_performance_mode
+      default: ''
+    - name: efs_manage_db2_mount_count
       type: string
-    - name: efs_mount_count
+      default: ''
+    - name: efs_manage_db2_throughput_mode
       type: string
-    - name: efs_lifecycle_policy_transition_to_ia
+      default: ''
+
+   # iac-efs manage_main params
+    - name: efs_manage_main_performance_mode
       type: string
-      default: ""
-    - name: efs_lifecycle_policy_transition_to_primary_storage_class
+      default: ''
+    - name: efs_manage_main_mount_count
       type: string
-      default: ""
-    - name: efs_throughput_mode
+      default: ''
+    - name: efs_manage_main_throughput_mode
       type: string
-    - name: efs_encrypted
+      default: ''
+
+   # iac-efs iot_db2 params
+    - name: efs_iot_db2_performance_mode
       type: string
+      default: ''
+    - name: efs_iot_db2_mount_count
+      type: string
+      default: ''
+    - name: efs_iot_db2_throughput_mode
+      type: string
+      default: ''
+
+   # iac-efs facilities-db2 params
+    - name: efs_facilities_db2_performance_mode
+      type: string
+      default: ''
+    - name: efs_facilities_db2_mount_count
+      type: string
+      default: ''
+    - name: efs_facilities_db2_throughput_mode
+      type: string
+      default: ''
+
+   # iac-efs facilities-main params
+    - name: efs_facilities_main_performance_mode
+      type: string
+      default: ''
+    - name: efs_facilities_main_mount_count
+      type: string
+      default: ''
+    - name: efs_facilities_main_throughput_mode
+      type: string
+      default: ''
+
+   # iac-efs visualinspection-main params
+    - name: efs_visualinspection_main_performance_mode
+      type: string
+      default: ''
+    - name: efs_visualinspection_main_mount_count
+      type: string
+      default: ''
+    - name: efs_visualinspection_main_throughput_mode
+      type: string
+      default: ''
+
 
   stepTemplate:
     name: gitops-iac-efs
@@ -75,25 +129,60 @@ spec:
         value: $(params.github_repo)
       - name: MAS_INSTANCE_ID
         value: $(params.mas_instance_id)
+
+      # iac-efs common params
       - name: IS_EFS
         value: $(params.is_efs)
       - name: EFS_SOURCE
         value: $(params.efs_source)
-      - name: EFS_CREATION_TOKEN
-        value: $(params.efs_creation_token)
-      - name: EFS_PERFORMANCE_MODE
-        value: $(params.efs_performance_mode)
-      - name: EFS_MOUNT_COUNT
-        value: $(params.efs_mount_count)
-      - name: EFS_LIFECYCLE_POLICY_TRANSITION_TO_IA
-        value: $(params.efs_lifecycle_policy_transition_to_ia)
-      - name: EFS_LIFECYCLE_POLICY_TRANSITION_TO_PRIMARY_STORAGE_CLASS
-        value: $(params.efs_lifecycle_policy_transition_to_primary_storage_class)
-      - name: EFS_THROUGHPUT_MODE
-        value: $(params.efs_throughput_mode)
-      - name: EFS_ENCRYPTED
-        value: $(params.efs_encrypted)
-        
+
+      # iac-efs manage_db2 params
+      - name: EFS_MANAGE_DB2_PERFORMANCE_MODE
+        value: $(params.efs_manage_db2_performance_mode)
+      - name: EFS_MANAGE_DB2_MOUNT_COUNT
+        value: $(params.efs_manage_db2_mount_count)
+      - name: EFS_MANAGE_DB2_THROUGHPUT_MODE
+        value: $(params.efs_manage_db2_throughput_mode)
+
+      # iac-efs manage_main params
+      - name: EFS_MANAGE_MAIN_PERFORMANCE_MODE
+        value: $(params.efs_manage_main_performance_mode)
+      - name: EFS_MANAGE_MAIN_MOUNT_COUNT
+        value: $(params.efs_manage_main_mount_count)
+      - name: EFS_MANAGE_MAIN_THROUGHPUT_MODE
+        value: $(params.efs_manage_main_throughput_mode)
+
+      # iac-efs iot_db2 params
+      - name: EFS_IOT_DB2_PERFORMANCE_MODE
+        value: $(params.efs_iot_db2_performance_mode)
+      - name: EFS_IOT_DB2_MOUNT_COUNT
+        value: $(params.efs_iot_db2_mount_count)
+      - name: EFS_IOT_DB2_THROUGHPUT_MODE
+        value: $(params.efs_iot_db2_throughput_mode)
+
+      # iac-efs facilities-db2 params
+      - name: EFS_FACILITIES_DB2_PERFORMANCE_MODE
+        value: $(params.efs_facilities_db2_performance_mode)
+      - name: EFS_FACILITIES_DB2_MOUNT_COUNT
+        value: $(params.efs_facilities_db2_mount_count)
+      - name: EFS_FACILITIES_DB2_THROUGHPUT_MODE
+        value: $(params.efs_facilities_db2_throughput_mode)
+
+      # iac-efs facilities-main params
+      - name: EFS_FACILITIES_MAIN_PERFORMANCE_MODE
+        value: $(params.efs_facilities_main_performance_mode)
+      - name: EFS_FACILITIES_MAIN_MOUNT_COUNT
+        value: $(params.efs_facilities_main_mount_count)
+      - name: EFS_FACILITIES_MAIN_THROUGHPUT_MODE
+        value: $(params.efs_facilities_main_throughput_mode)
+
+      # iac-efs visualinspection-main params
+      - name: EFS_VISUALINSPECTION_MAIN_PERFORMANCE_MODE
+        value: $(params.efs_visualinspection_main_performance_mode)
+      - name: EFS_VISUALINSPECTION_MAIN_MOUNT_COUNT
+        value: $(params.efs_visualinspection_main_mount_count)
+      - name: EFS_VISUALINSPECTION_MAIN_THROUGHPUT_MODE
+        value: $(params.efs_visualinspection_main_throughput_mode)
     envFrom:
       - configMapRef:
           name: environment-properties
