--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-mainTF.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-mainTF.yaml.j2
@@ -22,17 +22,6 @@ data "aws_subnets" "internal_subnets" {
   }
 }
 
-data "aws_subnets" "workload_subnets" {
-  filter {
-    name   = "vpc-id"
-    values = [var.vpc_id]
-  }
-  filter {
-    name   = "cidr-block"
-    values = {{VPC_CIDR_WORKLOAD_INTERNAL}}
-  }
-}
-
 
 locals {
   cluster = {
@@ -40,10 +29,8 @@ locals {
       "internal_subnet_ids" : data.aws_subnets.internal_subnets.ids
   }
 
-  worker_subnet_ids = data.aws_subnets.workload_subnets.ids
-
   multiple-efs = {
-{% if EFS_MANAGE == "true" %}
+{%- if EFS_MANAGE == "true" %}
     manage-db2 = {
       name = join("-", ["efs", var.cluster_name, var.instance_name, "manage-db2"])
       performance_mode = "{{EFS_MANAGE_DB2_PERFORMANCE_MODE}}"
@@ -56,24 +43,24 @@ locals {
       throughput_mode = "{{EFS_MANAGE_MAIN_THROUGHPUT_MODE}}"
       efs_mount_count = {{EFS_MANAGE_MAIN_MOUNT_COUNT}}
     }
-{% endif %}
-{% if EFS_IOT == "true" %}
+{%- endif %}
+{%- if EFS_IOT == "true" %}
     iot-db2 = {
       name = join("-", ["efs", var.cluster_name, var.instance_name, "iot-db2"])
       performance_mode = "{{EFS_IOT_DB2_PERFORMANCE_MODE}}"
       throughput_mode = "{{EFS_IOT_DB2_THROUGHPUT_MODE}}"
       efs_mount_count = {{EFS_IOT_DB2_MOUNT_COUNT}}
     }
-{% endif %}
-{% if EFS_VISUALINSPECTION == "true" %}
+{%- endif %}
+{%- if EFS_VISUALINSPECTION == "true" %}
     visualinspection-main = {
       name = join("-", ["efs", var.cluster_name, var.instance_name, "visualinspection-main"])
       performance_mode = "{{EFS_VISUALINSPECTION_MAIN_PERFORMANCE_MODE}}"
       throughput_mode = "{{EFS_VISUALINSPECTION_MAIN_THROUGHPUT_MODE}}"
       efs_mount_count = {{EFS_VISUALINSPECTION_MAIN_MOUNT_COUNT}}
     }
-{% endif %}
-{% if EFS_FACILITIES == "true" %}
+{%- endif %}
+{%- if EFS_FACILITIES == "true" %}
     facilities-db2 = {
       name = join("-", ["efs", var.cluster_name, var.instance_name, "facilities-db2"])
       performance_mode = "{{EFS_FACILITIES_DB2_PERFORMANCE_MODE}}"
@@ -86,7 +73,7 @@ locals {
       throughput_mode = "{{EFS_FACILITIES_MAIN_THROUGHPUT_MODE}}"
       efs_mount_count = {{EFS_FACILITIES_MAIN_MOUNT_COUNT}}
     }
-{% endif %}
+{%- endif %}
   }
 }
 
