[patch] Add aiservice as runAfter for suite-config

--- a/tekton/src/pipelines/mas-install.yml.j2
+++ b/tekton/src/pipelines/mas-install.yml.j2
@@ -263,6 +263,7 @@ spec:
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/core/suite-config.yml.j2') | indent(4) }}
       runAfter:
         - suite-install
+        - aiservice
       when: 
         - input: "$(params.standalone_aiservice_install)"
           operator: notin
