[patch] Add a new spatial script on fvt pipeline (#1844)
Co-authored-by: lucas <lucas.aragao@ibm.com>
Co-authored-by: leo-miran <105313348+leo-miran@users.noreply.github.com>

--- a/tekton/src/pipelines/taskdefs/fvt-manage-is/phase3.yml.j2
+++ b/tekton/src/pipelines/taskdefs/fvt-manage-is/phase3.yml.j2
@@ -185,3 +185,25 @@
       values: ["$(tasks.fvt-component.results.component_names[*])"]
   runAfter:
     - fvt-manage-lbs-utilities-ui
+
+# LBS - Run "cypress/manage/spatial-ui-maps/indoorsValidation.cy.js"
+- name: fvt-manage-spatial-maps
+  {{ lookup('template', 'taskdefs/fvt-manage/ui-cypress/taskref.yml.j2') | indent(2) }}
+  params:
+    {{ lookup('template', 'taskdefs/fvt-manage/ui-cypress/params.yml.j2') | indent(4) }}
+    - name: fvt_test_suite
+      value: spatial-ui-maps
+    - name: fvt_config_file
+      value: configs/lbs-cypress.config.js
+  when:
+    - input: "$(params.fvt_digest_manage_cypress)"
+      operator: notin
+      values: [""]
+    - input: "$(params.mas_app_channel_manage)"
+      operator: notin
+      values: [""]
+    - input: "spatial"
+      operator: in
+      values: ["$(tasks.fvt-component.results.component_names[*])"]
+  runAfter:
+    - fvt-manage-lbs-linear-ui
