--- a/tekton/src/pipelines/mas-install.yml.j2
+++ b/tekton/src/pipelines/mas-install.yml.j2
@@ -55,7 +55,7 @@ spec:
     # 1.2 Red Hat Certificate Manager
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/cluster-setup/cert-manager.yml.j2') | indent(4) }}
       runAfter:
-        - pre-install-check
+        - ibm-catalogs
 
     # 1.3 Configure Grafana
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/cluster-setup/grafana.yml.j2') | indent(4) }}
@@ -64,7 +64,7 @@ spec:
           operator: in
           values: ["install"]
       runAfter:
-        - pre-install-check
+        - ibm-catalogs
 
     # 1.4 Configure ECK
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/cluster-setup/eck.yml.j2') | indent(4) }}
@@ -73,12 +73,12 @@ spec:
           operator: in
           values: ["install"]
       runAfter:
-        - pre-install-check
+        - ibm-catalogs
 
     # 1.5 Configure Turbonomic
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/cluster-setup/turbonomic.yml.j2') | indent(4) }}
       runAfter:
-        - pre-install-check
+        - ibm-catalogs
 
 
     # 2. Install Universal Dependencies
@@ -115,7 +115,7 @@ spec:
     # 2.5 DRO
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/dependencies/dro.yml.j2') | indent(4) }}
       runAfter:
-        - pre-install-check
+        - ibm-catalogs
 
 
     # 3. Cloud Pak for Data
@@ -157,7 +157,7 @@ spec:
     # 4.1 Install Cloud Object Storage (COS)
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/dependencies/cos.yml.j2') | indent(4) }}
       runAfter:
-        - pre-install-check
+        - ibm-catalogs
 
     # 4.2 Configure COS in MAS
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/core/suite-config-cos.yml.j2') | indent(4) }}
@@ -168,7 +168,7 @@ spec:
     # 4.3 Nvidia GPU Operator
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/dependencies/nvidia.yml.j2') | indent(4) }}
       runAfter:
-        - pre-install-check
+        - ibm-catalogs
 
 
     # 5. Install & Configure IBM MAS
@@ -176,7 +176,7 @@ spec:
     # 5.1 Configure Workspace
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/core/gencfg-workspace.yml.j2') | indent(4) }}
       runAfter:
-        - pre-install-check
+        - ibm-catalogs
 
     # 5.2 DNS Setup
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/core/suite-dns.yml.j2') | indent(4) }}
@@ -313,8 +313,7 @@ spec:
       runAfter:
         - app-install-assist
         - app-install-optimizer
-        - app-install-predict # infers Manage completed
-        - app-install-monitor # infers IoT completed
+        - app-install-predict # infers Manage, Monitor, and IoT completed
         - app-install-visualinspection
         - app-install-facilities
         - arcgis
