--- a/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
@@ -142,7 +142,7 @@ spec:
         - name: is_efs
           value: $(params.is_efs)
         - name: efs_source
-          value: $(params.efs_source)`
+          value: $(params.efs_source)
 
         # iac-efs manage_db2 params
         - name: efs_manage_db2_performance_mode
