--- a/tekton/src/pipelines/taskdefs/apps/manage-app.yml.j2
+++ b/tekton/src/pipelines/taskdefs/apps/manage-app.yml.j2
@@ -9,6 +9,8 @@
       value: $(params.mas_instance_id)
     - name: mas_app_id
       value: manage
+    - name: aiservice_instance_id
+      value: $(params.aiservice_instance_id)
     - name: artifactory_username
       value: $(params.artifactory_username)
     - name: artifactory_token
