--- a/tekton/src/pipelines/aiservice-fvt-launcher.yml.j2
+++ b/tekton/src/pipelines/aiservice-fvt-launcher.yml.j2
@@ -239,6 +239,26 @@ spec:
       runAfter:
         - start-upgrade
 
+    # Verify health of the cluster before we consider the upgrade complete
+    # Reusing mas-devops-ocp-verify Task which already has 
+    # -------------------------------------------------------------------------
+    - name: post-upgrade
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-ocp-verify
+      params:
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(8) }}
+        # Pipeline Config
+        - name: devops_suite_name
+          value: "post-upgrade"
+      when:
+        - input: "$(params.sync_with_upgrade)"
+          operator: in
+          values: ["True", "true"]
+      runAfter:
+        - waitfor-upgrade
+
   # Finally
   # ---------------------------------------------------------------------------
   finally:
