--- a/tekton/src/pipelines/aiservice-fvt-launcher.yml.j2
+++ b/tekton/src/pipelines/aiservice-fvt-launcher.yml.j2
@@ -201,6 +201,64 @@ spec:
       runAfter:
         - waitfor-update
 
+    # Upgrade Sync Point
+    # -------------------------------------------------------------------------
+    - name: start-upgrade
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: aiservice-fvt-start-upgrade
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: aiservice_instance_id
+          value: $(params.aiservice_instance_id)
+      when:
+        - input: $(params.sync_with_upgrade)
+          operator: in
+          values: ["true", "True"]
+      runAfter:
+        - post-update
+
+    - name: waitfor-upgrade
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-wait-for-configmap-v2
+      params:
+        - name: image_pull_policy
+          value: $(params.image_pull_policy)
+        - name: configmap_name
+          value: sync-upgrade
+        - name: configmap_target_value
+          value: Completed,Succeeded,Failed
+      when:
+        - input: $(params.sync_with_upgrade)
+          operator: in
+          values: ["true", "True"]
+      runAfter:
+        - start-upgrade
+
+    # Verify health of the cluster before we consider the upgrade complete
+    # Reusing mas-devops-ocp-verify Task which already has 
+    # -------------------------------------------------------------------------
+    - name: post-upgrade
+      timeout: "0"
+      taskRef:
+        kind: Task
+        name: mas-devops-ocp-verify
+      params:
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(8) }}
+        # Pipeline Config
+        - name: devops_suite_name
+          value: "post-upgrade"
+      when:
+        - input: "$(params.sync_with_upgrade)"
+          operator: in
+          values: ["True", "true"]
+      runAfter:
+        - waitfor-upgrade
+
   # Finally
   # ---------------------------------------------------------------------------
   finally:
